--- a/src/im/index.scss
+++ b/src/im/index.scss
@@ -2,11 +2,16 @@
   box-sizing: border-box;
 }
 
+* {
+  user-select: none;
+}
+ 
+
 html,
 body,
 #root {
-  height: 100%;
   width: 100%;
+  height:100%; 
 }
 
 .flex {
@@ -14,15 +19,11 @@ body,
   flex-direction: column;
 }
 
-#root {
-  display: flex;
-}
-
 html {
   color: #000;
   background: #FFF;
 }
- 
+
 
 body,
 div,
@@ -49,6 +50,8 @@ th,
 td {
   margin: 0;
   padding: 0;
+  font-weight: normal;
+  font-size: 100%;
 }
 
 table {
@@ -82,16 +85,6 @@ ul {
 caption,
 th {
   text-align: left;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
 }
 
 q:before,
